Add error handling for invalid user inputs
Users can enter unknown commands, malformed task formats, or invalid
task indices.

Handle such inputs gracefully without crashing, and provide clear and
consistent feedback.